[Refactoring] Secondary Controller

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -165,7 +165,7 @@
 
             <% if current_user.adm? %>
               <li id="configuration">
-                  <%= link_to "/configuration" do %><span class="glyphicon glyphicon-list"></span>Configuration<% end %>
+                  <%= link_to "/configurations" do %><span class="glyphicon glyphicon-list"></span>Configuration<% end %>
               </li>
             <% end %>
 
