--- a/app/views/secondaries/index.html.erb
+++ b/app/views/secondaries/index.html.erb
@@ -1,4 +1,4 @@
 <%= render "shared/resources",{resource_disp1: @resource_name,
-  resource_disp2: @resource_name,
+  resource_disp2: @resource_name.pluralize,
   resource: @resources,
   new_resource: @model_name.new }   %>
