[top_menu] bringing menu to top

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -17,7 +17,8 @@
 *= require custom
 *= require redactor-rails
 *= require jqueryui-datepicker
-
+*= require smartmenus
+*= require smartmenus_custom
 */
 
 /* states and images */
