[many changes regarding deep_clone/home UI/datatables/tab_type]

--- a/app/views/enquiries/_listing.html.erb
+++ b/app/views/enquiries/_listing.html.erb
@@ -1,5 +1,5 @@
 <!-- Setting variables used in this partial -->
-<%= render 'shared/core_listing', model: "Enquiry" %>
+<%= render 'shared/core_listing', model: "Enquiry", tab_type: @tab_type %>
 
 
 
