--- a/app/views/enquiries/index.html.erb
+++ b/app/views/enquiries/index.html.erb
@@ -1,7 +1,7 @@
 
 <%= render 'shared/core_index', model: "Enquiry",
                          new: "new_enquiry_path",
-                         tab: "EnquiryStatus" %>
+                         tab: @tab_type %>
                          
 
 
