--- a/app/assets/stylesheets/smartmenus_custom.css
+++ b/app/assets/stylesheets/smartmenus_custom.css
@@ -4,7 +4,7 @@
 }
 
 .navbar-default {
-    background-color: #ffffff;
+    background-color: #A1E9B5;
     border:1px solid #aaaaaa;    
     margin-bottom: 0;
 }
@@ -15,14 +15,14 @@
 
 .navbar-default .navbar-nav>li>a:hover, .navbar-default .navbar-nav>li>a:focus {
     text-decoration: none;
-    background-color: #eeeeee;
+    background-color: #A1E9B5;
     color: #004156;
     border-bottom: 5px solid #004156;
 }
 
 .navbar-default .navbar-nav>.open>a, .navbar-default .navbar-nav>.open>a:hover, .navbar-default .navbar-nav>.open>a:focus {
     text-decoration: none;
-    background-color: #eeeeee;
+    background-color: #A1E9B5;
     color: #004156;
 }
 
@@ -31,14 +31,17 @@
 .navbar-default .navbar-nav > .active > a:focus {
 color: #004156;
 border-bottom: 5px solid #004156;
-background-color: #ffffff;
+background-color: #A1E9B5;
 font-weight: bold;
 }
 
 .navbar-default .dropdown-menu > li > a:hover, 
 .navbar-default .dropdown-menu > .active > a,
 .navbar-default .dropdown-menu > .active > a:hover {
-  background-color: #ffffff;  
+  background-color: #A1E9B5;
+  color: #004156;
+  border: 1px solid #eeeeee;
+  font-size: 12px;  
   font-weight: bold;
 
 }
@@ -47,5 +50,9 @@ font-weight: bold;
   background-color: #ffffff;
   color: #004156;
   border: 1px solid #eeeeee;
+  font-size: 12px;
+}
+
+.custom-navbar > .sm {
   font-size: 12px;
 }
