--- a/app/views/configurations/_menu.html.erb
+++ b/app/views/configurations/_menu.html.erb
@@ -35,7 +35,7 @@
     <div class="btn-group">
       <button data-toggle="dropdown" class="btn btn-info dropdown-toggle" type="button">Partner<span class="caret"></span></button>
       <ul role="menu" class="dropdown-menu">
-        <% [:partner_type,:partner_group,
+        <% [:partner_type,:partner_group, :contract_status,
             :contract_doc_category,:commission_claim_status,:processing_fee_type,
             :processing_fee_status,:commission_status].sort.each do |r| %>
               <% if can? :read, r.to_s.camelize.constantize %>
