adding _tabs view important + seeds

--- a/app/views/shared/_tabs.html.erb
+++ b/app/views/shared/_tabs.html.erb
@@ -22,7 +22,8 @@
                                              lang: i1 + "_id",
                                              class: i1,
                                              style: "display: #{i[1]}",
-                                             title: i[0] } %>
+                                             title: i[0],
+                                             tab_type: @tab_type } %>
              
            </li>
    <% end %>
@@ -42,7 +43,8 @@
                                                      lang: i1 + "_id",
                                                      class: i1,
                                                      style: "display: #{i[1]}",
-                                                     title: i[0] } %>
+                                                     title: i[0],
+                                                     tab_type: @tab_type } %>
                      
                    </li>
                  <% end %>
