partner_tree full implementation, top_menu, datatables, deleted unwanted js files, handling tertiary models

--- a/app/assets/stylesheets/smartmenus_custom.css
+++ b/app/assets/stylesheets/smartmenus_custom.css
@@ -56,3 +56,7 @@ font-weight: bold;
 .custom-navbar > .sm {
   font-size: 12px;
 }
+
+.navbar-default ul.dropdown-menu > li.ml > a  {
+  padding-left: 40px;
+}
