--- a/app/views/branches/index.html.erb
+++ b/app/views/branches/index.html.erb
@@ -1,5 +1,5 @@
 <!-- rendering the left menu -->
-<%= render 'resources/menu' %>
+<%= render 'configurations/menu' %>
 
 <!-- branches more information -->
 
