--- a/app/views/partners/index.html.erb
+++ b/app/views/partners/index.html.erb
@@ -1,7 +1,7 @@
 
 <%= render 'shared/core_index', model: "Partner",
                          new: "new_partner_path",
-                         tab: "PartnerType" %>
+                         tab: @tab_type %>
 
 
 
