--- a/app/views/partner_types/_form.html.erb
+++ b/app/views/partner_types/_form.html.erb
@@ -7,7 +7,12 @@
               <br/>
           <% end %>
           <%= bs(f,"name","text_field",[nil,3],6) %>
-          <%= bs(f,"educational","check_box",[nil,3],6) %>
+          <%= bs(f,[:partner_category_id,PartnerCategory.order(:name),
+            :id,
+            :name,
+            {prompt: "-partner category-"},{}],
+            "collection_select",
+            [nil,3],6) %>     
           <%= bs(f,[:desc,{class: 'form-control', cols: nil, rows: nil}],"text_area",[nil,3],6) %>
           <div class="form-group form-last">
             <div class="col-sm-offset-3 col-sm-5">
