--- a/app/views/partners/_basic.html.erb
+++ b/app/views/partners/_basic.html.erb
@@ -29,12 +29,20 @@
   </div>
   <div class="col-xs-5 row-top">
     <ul class="vlsdet pt-0 border-b">
-        <h4 class="pt-0 bold-subhead">About</h4>
+        <h4 class="pt-0 bold-subhead">Assignment</h4>
+        <li>
+         <div class="padded">
+         <label><span class="light">Category</span></label>
+         <small class="padded tag-like orange">
+           <%= a.try_chain(:category,:name) %>
+         </small> 
+         </div>
+        </li>
         <li>
          <div class="padded">
          <label><span class="light">Type</span></label>
          <small class="padded tag-like purple">
-           <%= a.type.name rescue "Unknown" %>
+           <%= a.try_chain(:type,:name) %>
          </small> 
          </div>
         </li>
@@ -58,6 +66,10 @@
     </ul>
   </div>
   <div class="col-xs-4">
+
+    
+    <h5 class="text-center green-sided">Country : <b><%= a.try_chain(:country,:name) %></b></h5>
+    <h5 class="text-center red-sided">Owner : <b><%= a.ato %></b></h5>
     <div class="well well-sm form-last">
         <h4 class="bold-subhead">History</h4>
         <ul class="vlsdet-s pt-0">
@@ -68,10 +80,7 @@
            <% out = current_user.id == a.assigned_to ? [a.ato,1,'to me'] : a.ato %>
            <%= li1('assigned to',out,'span','small')%>
            <%= li1('assigned by',a.aby,'span','small')%>
-
-
-
-    </ul>
+        </ul>
     </div>
     <ul class="vlsdet-s">
     <h4 class="bold-subhead">Description</h4>
