--- a/app/views/partners/_people.html.erb
+++ b/app/views/partners/_people.html.erb
@@ -1,60 +1,35 @@
 <!-- people linked with this partner -->
+<div class="row well border-b">
+
+  <h4 class="bold-subhead"> People </h4>
+
 <% obj.people.each do |i| %>
   <% @person = i %>
   <% a = i %>
-<div class="cols" style="padding-bottom:20px">
-   <div class="col6">
-     <div class="rel">
-                      <%= image_tag((a.image? ? a.image_url : "/images/icons/user.png"),
-                                   {width: "100",class: "imgb fl"}) %>
-     </div>
-   <h5>
-     <b>
-       &nbsp;&nbsp;&nbsp;&nbsp;<%= a.name %> [<%= a.type.name rescue "Unassigned Type" %>]
-     </b>
-   </h5>
-     <div class="fl padl20">
-                        <ul class="vlsdet">
-                        <li><label>Gender </label>: <%= a.gender %></li>
-                        <li><label>Date Of Birth</label>: <%= a.date_of_birth %></li>
-                        <li><label>Email </label>: <%= a.email %></li>
-                        <li><label>Mobile </label>: <%= a.mobile %></li>
-                        </ul>
-     </div>
-   </div>
-   <div class="col3">
-   </div>
-   <div class="col5">
-       <table>
-          <% %w(skype facebook linkedin gplus).each do |s|%>
-            <tr>
-            <td><%= image_tag("/images/icons/" + s + ".png",{width: 24}) %></td>
-            <td><%= s.titleize %>&nbsp;&nbsp;&nbsp;&nbsp;</td>
-            <td> <%= a.send(s) %></td>
-            </tr>
-          <% end %>
-       </table>
-   </div>
-</div>
+  
+  <div class="row border-b">
+    <h4> <%= link_to a.name, a %> <span class="sm"> Click here for detailed view</span></h4>
 
-     <h5 class="htab"> Notes For This Person<h5>
-     <div id="person_note_<%= i.id %>" >
-          <%= render 'notes/note', sub: @person %>
-     </div>
-     <br/>
-     <br/>
-     
-     <%= nested_form_for(i,remote: true) do |r| %>
-      <%= r.fields_for :notes,i.notes.build do |n| %>
-        <%= n.hidden_field :sub_class, value: "Person" %>
-        <%= n.text_area :content,{:size => '10x3', :style => 'width:400px;',class: "app_note"} %>
-      <% end %> 
-      <br/>
-      <%= r.submit "Write",{class: "btnp"} %>
+  </div>
+  <br/>
+  <div class="row">
+  <div class="col-xs-3">
+     <%= render 'images/disp', core: "person", a: a %>
+  </div>    
+
+  <div class="col-xs-5">
+    <ul class="vlsdet">
+      <% %w(designation email mobile gender date_of_birth skype facebook).each do |v| %>
+          <%= li1(v,v,'span','small',a)%>
       <% end %>
-     <br/>
-<br/>
-<div class="brg01"> </div>
-<br/>
-<br/>
+    </ul>
+  </div>
+  
+  <div class="col-xs-4">
+    <ul class="vlsdet-s">   
+      <%= li1('description','desc','span','small',a)%>
+    </ul>
+  </div>
+  </div>
 <% end %>
+</div>
