--- a/app/views/resources/_menu.html.erb
+++ b/app/views/resources/_menu.html.erb
@@ -35,9 +35,10 @@
     <div class="btn-group">
       <button data-toggle="dropdown" class="btn btn-info dropdown-toggle" type="button">Partner<span class="caret"></span></button>
       <ul role="menu" class="dropdown-menu">
-        <% [:partner_type,:partner_group,
-            :contract_doc_category,:commission_claim_status,:processing_fee_type,
-            :processing_fee_status,:commission_status].sort.each do |r| %>
+        <% [:partner_category,:partner_type,:partner_group,
+            :contract_doc_category,:commission_status,
+            :commission_claim_status,:processing_fee_type,
+            :processing_fee_status].each do |r| %>
               <% if can? :read, r.to_s.camelize.constantize %>
               <li>
                  <%= link_to r.to_s.titleize.pluralize,"/secondaries/" + r.to_s %>
