--- a/app/views/shared/_core_index.html.erb
+++ b/app/views/shared/_core_index.html.erb
@@ -1,8 +1,7 @@
 <script type="text/javascript">
-$(function(){
-  $("ul.seperator > li > a.all").trigger('click');
+$(function(){  
+  $("ul.seperator > li  a.<%= @tab_value %>").trigger('click');
 });
-
 </script>
 
               <div class="col-md-10">
